update babel config

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>MetaMask &lt; = &gt; Ledger Bridge</title>
+    <title>Nifty Wallet &lt; = &gt; Ledger Bridge</title>
   </head>
   <body>
     <script src="./bundle.js" type="text/javascript"></script>
